# uniffi-rs

./: Cargo.toml
examples/external-foreign-trait/: Cargo.toml
examples/external-foreign-trait/shared/: Cargo.toml
examples/external-foreign-trait/shared/src/: lib.rs
examples/external-foreign-trait/src/: lib.rs
examples/external-foreign-trait/tests/: test_generated_bindings.rs
examples/external-foreign-trait/tests/bindings/: test_external_foreign_trait.kts
