[package]
name = "uniffi-example-shared"
edition = "2021"
version = "0.22.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "shared"

[dependencies]
uniffi = { path = "../../../uniffi", version = "0.25" }
thiserror = "1.0"

[build-dependencies]
uniffi = { path = "../../../uniffi", version = "0.25", features = ["build"] }

[dev-dependencies]
uniffi = { path = "../../../uniffi", version = "0.25", features = [
  "bindgen-tests",
] }
